# llm

./: .gitignore  README.md
basic_model_training/: main.py  testing.py
basic_rag/: main.py
basic_tool_call/: main.py
brochure_builder/: brochure.md  main.py
chroma_rag/: main.py
gradio_llm_chat/: main.py
huggingface/: 01-gpt2.ipynb  02-tokernizers.ipynb  03-models.ipynb  04-datasets.ipynb  05-create-tokenizer.ipynb  06-fine-tuning.ipynb  07-gpt2-tuning.ipynb  08-quantizing.ipynb  09-mulitmodal.ipynb  10-nlp.ipynb  11-finetuning-multiclass-text.ipynb  12-finetuning-qa-class  test.jsonl  valid.jsonl
mcp/: client.py  pyproject.toml  server.py
mcp-project/: .gitignore  README.md  client.py  pyproject.toml  server.py  server_config.json
mcp-project/tests/: test_client.py  test_server.py
mcp/tests/: __init__.py  conftest.py  test_server.py
multi_model_conversation/: conversation.txt  main.py
price_is_right_project/: base.py  logger.py  main.py  pricer_service.py  product_database.py
price_is_right_project/agents/: __init__.py  agent.py  deals.py  frontier_agent.py  planning_agent.py  scanner_agent.py  specialist_agent.py
website_summarizer/: deepseek-r11.5b-response.md  deepseek-r1:1.5b-response.md  gpt-4o-mini-response.md  llama3.2-response.md  main.py
